Add some useful JVM flags